Fixing spacing from footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -113,6 +113,7 @@ footer{
   background: $white;
   text-align: center;
   padding: 20px;
+  padding-bottom: 80px;
 }
 
 .white{
